# Evaluating-Career-Stability-of-Master-s-Graduates

./: .gitignore  EDA-v2.ipynb  EDA.ipynb  README.md  dataset.md  mapping_pipeline_slides.md  pyproject.toml
Final/: .gitignore  Dockerfile  careerscope_api_docs.md  demo.html
Final/api/: data.py  main.py  models.py  recommend.py  requirements.txt
Final/code/: field_mapping.ipynb  final.ipynb  final_test.ipynb  final_v2.ipynb
Progress/: README.md  clean.ipynb  map.ipynb  mapping_showcase_run.ipynb
app/: recommendation.html
docs/: CNAME  dashboard.html  index.html  recommendation.html
